Update to 1.21.6